add container sccs

--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
 
     <div >
       <h2>How to use and install it</h2>
-      <p>You can find all the information in the <a href="https://github.com/dianedelallee/artemis" target="_blank">Github page</a></p>
+      <p>You can find all the information in the <a href="https://github.com/dianedelallee/artemis#how-to-use-it" target="_blank">Github page</a></p>
     </div>
 
 
