add container demo page and update Readme

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
     <a href="form.html"><button class="gamer-secondary">Form</button></a>
     <a href="highlight.html"><button class="gamer-success">Highlight</button></a>
     <a href="link.html"><button class="gamer-warning">Link</button></a>
+    <a href="container.html"><button class="gamer-danger">Container</button></a>
 
 
     <div >
