feat(alert): add new component alert
Add scss style for alert
Update the readme page
add a demo page for the alert

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,7 @@
     <a href="highlight.html"><button class="gamer-success">Highlight</button></a>
     <a href="link.html"><button class="gamer-warning">Link</button></a>
     <a href="container.html"><button class="gamer-danger">Container</button></a>
+    <a href="alert.html"><button class="gamer-secondary-dark">Alert</button></a>
 
 
     <div >
